...
            {'priceCoins' in item ? <View style={styles.price}>
              <Text style={styles.priceLabel}>Valeur</Text>
              <CoinAmount amount={item.priceCoins} />
            </View> : null}
            {equipped === true ? (
              <View style={styles.equippedBadge}>
                <Text style={styles.equippedLabel}>ÉQUIPÉ</Text>
              </View>
            ) : null}
          </View>
        </View>
      </View>
    </View>
...
