appId: app.grrind.e2e
---
- launchApp
- tapOn:
    id: tab-guilde
- takeScreenshot: alam-before-guild
- tapOn:
    id: tab-inventaire
- takeScreenshot: alam-before-inventory
- tapOn:
    id: tab-combat
- takeScreenshot: alam-before-combat
